[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Zombie.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Zombie.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 227.009

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -6, -2, 4, -2, 5, 5, -7, 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 2, 1 )
scale = Vector2( 2.17614, 2.17614 )
polygon = PoolVector2Array( -9, -5, 7.35248, -4.5953, 7, 4, -9.1906, 4.5953 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Range" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
